--- a/home.css
+++ b/home.css
@@ -7,15 +7,16 @@
 .topnav img{
     float: left;
     margin-right: 20px;
+    margin-right: 30px;
+
 }
  img{
  padding: 10px;
 }
-.image {
+.image img {
   float: left;
-}
-.image2{
-  float: left;
+  margin-top: 30px;
+
 }
 button{
     width: 8%;
