--- a/home.css
+++ b/home.css
@@ -1,9 +1,5 @@
 * {box-sizing: border-box;}
 
-/* body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-} */
 .topnav img{
     float: left;
     margin-right: 20px;
@@ -65,9 +61,10 @@ input.searchbar{
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
- 
-
 } 
+footer{
+  margin-top: 10px;
+}
 
 .searchBottom a:hover {
   background-color: #ddd;
