--- a/recipe.css
+++ b/recipe.css
@@ -16,7 +16,7 @@ img{
 h3{ 
     margin-top: 20px;
     font-weight: bold;
-    text-align: right;} 
+    text-align: left;} 
 
 p{
      margin: 10px;
