--- a/search.css
+++ b/search.css
@@ -1,3 +1,15 @@
+
+body {
+    display: flex;
+    height: 100%;
+    font-family: Helvetica;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    margin: 0;
+    background-color: #f0f0f0;
+}
+
 .material-symbols-outlined {
     font-variation-settings:
     'FILL' 0,
@@ -6,10 +18,14 @@
     'opsz' 24
 }
 
-body {
-    font-family: Helvetica;
-  }
-
+.container {
+    max-width: 1220px;
+    height: 100%;
+    width: 100%;
+    padding: 20px;
+    background-color: #ffffff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
 
 a {
     text-decoration: none;
@@ -28,6 +44,8 @@ label, #rInput {
   }
 
 table {
+    text-align: center;
+    width: 100%;
     border-collapse: collapse;
   }
 
@@ -35,10 +53,6 @@ th, td{
     border-bottom: 1px solid #ddd;
     text-align: left;
     padding: 12px;
-}
-
-#imgColumn{
-    width: 220px;
 }
 
 #recipeColumn{
