Unified formatting created using PageFormat.css

--- a/PageFormat.css
+++ b/PageFormat.css
@@ -1,56 +1,135 @@
-.topnav input[type=text] {
-    /* padding: 6px;
-    padding-right: 30%;
-    border: black;
-    margin-top: 8px;
-    margin-right: 16px;
-    font-size: 17px; */
-    background: url(search-white.png) no-repeat 10px 6px #fcfcfc;
-    border: 1px solid #d1d1d1;
-    font: bold 12px Arial,Helvetica,Sans-serif;
-    color: black;
-    width: 500px;
-    margin: 5px;
-    padding: 6px 15px 6px 35px;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    border-radius: 20px;
-    text-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
-    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15) inset;
-    -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15) inset;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15) inset;
-    -webkit-transition: all 0.7s ease 0s;
-    -moz-transition: all 0.7s ease 0s;
-    -o-transition: all 0.7s ease 0s;
-    transition: all 0.7s ease 0s;
+a {
+  text-decoration: none;
+} 
+
+a:hover {
+  text-decoration: underline;
+} 
+
+
+
+/* Style for the background */
+body {
+  display: flex;
+  height: 100%;
+  font-family: Helvetica;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  margin: 0;
+  background-color: antiquewhite;
 }
 
-.topnav input[type=text]:focus{
-  width: 200px;
-}
-.searchBottom a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  .searchBottom a.active {
-    background-color: #2196F3;
-    color: white;
-  }
 
-  .searchBottom a {
-    float: left; 
-  
-    display: block;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-   
-  
-  } 
-  .searchBottom {
-    overflow: hidden;
-    background-color: #e9e9e9;
-  }
+
+/* Style for the main container*/
+.container {
+  max-width: 1220px;
+  height: 100%;
+  width: 100%;
+  padding: 20px;
+  background-color: #ffffff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+
+
+/* Style for the navbar */
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between; /* Split into halves */
+  background-color: #fff;
+  padding: 10px 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+/* Style for the navbar buttons */
+.navbar a {
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Style for the navbar buttons when hovering*/
+.navbar a:hover {
+  background-color: antiquewhite;
+  color: black;
+  text-decoration: none;
+}
+
+/* Style for the logo container */
+.logo-container {
+  display: flex;
+  align-items: center;
+}
+
+/* Style for the logo image */
+.logo {
+  width: 200px; /* Adjust the size as needed */
+  height: auto;
+  margin-right: 10px;
+}
+
+/* Style for the search icon */
+.search-icon {
+  font-size: 24px;
+  color: #ddd;
+  margin-right: 8px;
+  position: absolute;
+  right: 8px;
+}
+
+/* Style for the input element */
+#rInput {
+  flex: 1;
+  outline: none;
+  font-size: 16px;
+  padding: 8px 40px 8px 8px;
+  border-radius: 4px;
+}
+
+/* Style elements for the searchbar*/
+.search-container {
+  margin-top: 24px;
+  position: relative; /* Needed to position icon */
+  display: flex;
+  align-items: center;
+}
+
+/* Style for the navigation elements and search bar*/
+.nav-container {
+  width: 100%
+}
+
+
+
+
+
+
+/* Style for the wrapper */
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; /* Set minimum height of the viewport */
+}
+
+
+
+
+
+
+/* Style for the footer */
+.footer {
+  color: #fff;
+  padding: 10px 0;
+  text-align: center;
+}
+
+/* Style to push footer to the bottom */
+.push {
+  flex-grow: 1;
+}
