--- a/recipe.css
+++ b/recipe.css
@@ -1,5 +1,5 @@
 body{
-     font-family: Arial, Helvetica, sans-serif ;
+     font-family: Helvetica;
      background-color: antiquewhite;} 
 
 h1{
